# badlang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MOTIVATION.md  README.md  build.rs  rustfmt.toml  tauri.conf.json
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  rust.yml
captchas/: CAPTCHA.html
captchas/captcha_test/: Cargo.toml
captchas/captcha_test/src/: main.rs
captchas/quadratic_generator/: Cargo.toml  tex.html
captchas/quadratic_generator/src/: main.rs
edge-function/: Cargo.toml  wrangler.toml
edge-function/src/: lib.rs
examples/: addition.bl  addition2.bl  hello.bl  if.bl
icons/: icon.icns
lambda_function/: Cargo.toml
lambda_function/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: main.rs  microservices.rs  tutorial.rs
ui/: index.html
