[package]
name = "badlang"
version = "0.3.3"
authors = ["Gian Zellweger <gian.zellweger@ict-scouts.ch"]
rust-version = "1.72.0"
description = "Next generation stack-based programming language"
documentation = "https://docs.rs/badlang"
readme = "README.md"
repository = "https://github.com/gianzellweger/badlang"
license = "CC0-1.0"
keywords = ["language", "programming", "programming-language"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.5.1"

[dependencies]
argon2 = "0.5.3"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
colored = "2.1.0"
fastrand = "2.0.1"
geocoding = "0.4.0"
geolocation = "0.2.1"
google-authenticator = "0.4.2"
home = "0.5.9"
humansize = "2.1.3"
indicatif = "0.17.7"
inquire = { version = "0.6.2"}
jod-thread = "0.1.2"
local-ip-address = "0.5.7"
native-dialog = "0.7.0"
notify-rust = "4.10.0"
open = "5.0.1"
rand = "0.8.5"
reqwest = "0.11.24"
savefile = "0.16.5"
savefile-derive = "0.16.5"
semver = "1.0.21"
static_assertions = "1.1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tauri = { version = "1.5.4", features = ["window-all"] }
tokio = "1.36.0"
