[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[features]
silly = ["dep:geocoding", "dep:geolocation", "dep:local-ip-address"]

[dependencies]
anyhow = "1.0.81"
colored = "2.1.0"
geocoding = { version = "0.4.0", optional = true }
geolocation = { version = "0.2.1", optional = true }
itertools = "0.12.1"
local-ip-address = { version = "0.6.1", optional = true }
static_assertions = "1.1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
